--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   get_it: ^8.0.3
   flutter_bloc: ^8.1.6
   equatable: ^2.0.5
+  flutter_svg: ^2.0.10
   
   # Internationalization
   flutter_localizations:
@@ -71,6 +72,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/ecommerce/images/onboarding/
+    - assets/ecommerce/svgs/
     - assets/intl/
   # assets:
   #   - images/a_dot_burr.jpeg
