--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   flutter_bloc: ^8.1.6
   equatable: ^2.0.5
   flutter_svg: ^2.0.10
+  go_router: ^17.0.0
   
   # Internationalization
   flutter_localizations:
