Add home feature with BLoC state management, UI components, and internationalization support for English and Spanish. Implement home page layout, categories, food items grid, and bottom navigation, along with necessary localization strings and routing configuration.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -73,6 +73,10 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/ecommerce/images/onboarding/
+    - assets/ecommerce/images/home/
+    - assets/ecommerce/images/home/categories/
+    - assets/ecommerce/images/home/category-items/
+    - assets/ecommerce/images/home/category-items/hamburger/
     - assets/ecommerce/svgs/
     - assets/intl/
   # assets:
