Implement environment configuration and secure storage integration for the reset password feature. Add support for multiple environments using dotenv, configure Dio for API requests, and enhance localization for success messages in both English and Spanish. Update navigation to display success modal upon password reset completion.

--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@
 .svn/
 .swiftpm/
 migrate_working_dir/
+.cursor/
 
 # IntelliJ related
 *.iml
@@ -46,3 +47,10 @@ app.*.map.json
 
 # flavor
 /flavor/
+
+# enviroments
+.env
+.env.development
+.env.production
+.env.staging
+.env.local
