--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,9 @@ dependencies:
   equatable: ^2.0.5
   flutter_svg: ^2.0.10
   go_router: ^17.0.0
+  dio: ^5.7.0
+  flutter_dotenv: ^5.1.0
+  flutter_secure_storage: ^9.0.0
   
   # Internationalization
   flutter_localizations:
@@ -77,8 +80,10 @@ flutter:
     - assets/ecommerce/images/home/categories/
     - assets/ecommerce/images/home/category-items/
     - assets/ecommerce/images/home/category-items/hamburger/
+    - assets/ecommerce/images/reset_password/
     - assets/ecommerce/svgs/
     - assets/intl/
+    - .env.development
   # assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
