Add local environment configuration and support for multiple flavors. Introduce main_local.dart for local development, update flavor configuration to include ecommerceLocal, and enhance asset resolution for the local flavor.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,6 +2,14 @@
     "version": "0.2.0",
     "configurations": [
         {
+            "name": "Flutter: Run (Local)",
+            "type": "dart",
+            "request": "launch",
+            "cwd": "${workspaceFolder}",
+            "program": "lib/main_local.dart",
+            "flutterMode": "debug"
+        },
+        {
             "name": "Flutter: Run (Debug)",
             "type": "dart",
             "request": "launch",
