feat: Implement search functionality with filters and results display
- Added SearchBloc, SearchEvent, and SearchState to manage search logic.
- Created SearchPage with a search bar and results grid.
- Implemented search filters in a bottom sheet for category and price range.
- Added EmptySearchState widget for no results scenario.
- Updated localization for search-related strings.
- Registered SearchBloc in the dependency injector.
- Enhanced FoodItemCard and HomeHeader to support navigation to search.
- Included assets for search images.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -82,6 +82,7 @@ flutter:
     - assets/ecommerce/images/home/category-items/hamburger/
     - assets/ecommerce/images/reset_password/
     - assets/ecommerce/svgs/
+    - assets/ecommerce/images/search/
     - assets/intl/
     - .env.development
     - .env.local
